feat(ci): tagged release builds per-OS uberjars, gated on tests
Add a `:build` alias + build.clj that produces an AOT uberjar for
dapr.main, rewriting the JavaFX classifier to the target OS so each
release-matrix leg bundles its own natives (deps.edn keeps :linux for
local dev/CI). Version comes from DAPR_VERSION/git tag (strips leading v).

release.yml triggers on v#.#.# tags: runs the unit + integration suites,
then — only if both pass — builds the per-OS uberjar matrix
(linux/mac-aarch64/win) and attaches each jar to one GitHub release.

Document the --enable-native-access=ALL-UNNAMED runtime flag (also set as
the jar's Enable-Native-Access manifest attribute).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>